quicklog/tests/failures/expr_without_name_1.stderr
error: expected identifier; expressions or non-identifiers must be accompanied by a name, e.g. info!(some_expr = 5, ...)
 --> tests/failures/expr_without_name_1.rs:7:11
  |
7 |     info!(5, 1 + 2);
  |           ^
